Implemented the Contact functionalities, improved the UI and Servlets

--- a/app/src/main/webapp/contact.html
+++ b/app/src/main/webapp/contact.html
@@ -4,8 +4,10 @@
     </head>
     <body>
         Choose an option:<br/>
-      	<a href="addContact.html">Add Contact</a><br/>
-      	<a href="updateContact.html">Update Contact</a><br/>
-      	<a href="deleteContact.html">Delete Contact</a><br/>
+      	<form action="ContactList" method="POST">
+          <input name="contact_method" type = "submit" value = "Add Contact" />
+          <input name="contact_method" type = "submit" value = "Update Contact" />
+          <input name="contact_method" type = "submit" value = "Delete Contact" />
+        </form><br/>
     </body>
 </html>
