--- a/app/src/main/webapp/role.html
+++ b/app/src/main/webapp/role.html
@@ -4,10 +4,10 @@
     </head>
     <body>
         Choose an option:<br/>
-      	<a href="addRole.html">Add Role</a><br/>
-      	<a href="updateRole.html">Update Role</a><br/>
-      	<a href="listRole.html">List Roles</a><br/>
-      	<a href="addPersonRoles.html">Add Person Roles</a><br/>
-        <a href="deletePersonRoles.html">Delete Person Roles</a><br/>
+        <form action="RoleList" method="POST">
+          <button formaction="addRole.html" type="submit">Add Role</button>
+          <input name="update_list" type = "submit" value = "Update Role" />
+          <input name="update_list" type = "submit" value = "List Role" />
+        </form><br/>
     </body>
 </html>
