--- a/app/src/main/webapp/role.html
+++ b/app/src/main/webapp/role.html
@@ -5,7 +5,7 @@
     <body>
         Choose an option:<br/>
         <form action="RoleList" method="POST">
-          <button formaction="addRole.html" type="submit">Add Role</button>
+          <button formaction="addRole.jsp" type="submit">Add Role</button>
           <input name="update_list" type = "submit" value = "Update Role" />
           <input name="update_list" type = "submit" value = "List Role" />
         </form><br/>
