--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
-    	Welcome to the Simple Servlet App! <br/><br/>
+    	<title>Simple Servlet App</title>
+    	 <br/><br/>
     </head>
     <body>
+    	<h2>Welcome to the Simple Servlet App!</h2>
     	Choose the Entity you want to modify:<br/>
-      	<a href="person.html">1. Person</a><br/>
-      	<a href="role.html">2. Role</a><br/>
-      	<a href="contact.html">3. Contact Information</a><br/>
+      	<a href="PersonList">1. Person</a><br/>
+      	<a href="RoleList">2. Role</a><br/>
+      	<a href="ContactList">3. Contact Information</a><br/>
     </body>
 </html>
