--- a/app/src/main/webapp/index.html
+++ b/app/src/main/webapp/index.html
@@ -6,8 +6,8 @@
     <body>
     	<h2>Welcome to the Simple Servlet App!</h2>
     	Choose the Entity you want to modify:<br/>
-      	<a href="PersonList">1. Person</a><br/>
-      	<a href="RoleList">2. Role</a><br/>
-      	<a href="ContactList">3. Contact Information</a><br/>
+      	<a href="personList">1. Person</a><br/>
+      	<a href="roleList">2. Role</a><br/>
+      	<a href="contactList">3. Contact Information</a><br/>
     </body>
 </html>
